# entreno

./: .gitignore  main.py  proyecto_sdd.md  pyproject.toml  test_admin.py  test_forms.py  test_forms2.py  test_forms3.py
core/: settings.py  urls.py
requirements/: base.txt  desarrollo.txt  produccion.txt
static/: manifest.json
static/css/: custom.css
templates/: base.html
templates/training/: athlete_dashboard.html  athlete_detail.html  trainer_dashboard.html  workout_plan_detail.html  workout_plan_form.html
templates/training/partials/: exercise_row.html
templates/users/: athlete_profile_form.html  login.html  no_role.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  role_selector.html
training/: admin.py  analytics.py  forms.py  ml_engine.py  models.py  tests_ml.py  urls.py  views.py
training/migrations/: 0001_initial.py  0002_initial.py  0003_alter_exercise_video_url.py  0004_exercise_movement_pattern_exercise_sport_tags_and_more.py
training/templates/training/: live_workout.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_athleteprofile_fat_percentage_and_more.py  0003_athleteprofile_experience_level_athleteprofile_sport_and_more.py
