[project]
name = "entreno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.15",
    "django-debug-toolbar>=7.0.0",
    "django-environ>=0.11.2",
    "djangorestframework>=3.14.0",
    "psycopg>=3.3.4",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.0.0",
]
