[project]
name = "entreno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "django-debug-toolbar>=7.0.0",
    "django-environ>=0.11.2",
    "djangorestframework>=3.14.0",
    "lightgbm>=4.7.0",
    "numpy>=2.5.1",
    "pandas>=3.0.5",
    "psycopg>=3.3.4",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
prod = [
    "gunicorn>=26.0.0",
]
